fix(ui): fix ministries footer-divider animation
ministries footer-divider animation-range-end was too long, so it
couldn't play to the finish

--- a/src/assets/styles/ministries.css
+++ b/src/assets/styles/ministries.css
@@ -332,7 +332,7 @@ footer {
   animation: wipe-right ease-in both;
   animation-timeline: view();
   animation-range-start: cover 0%;
-  animation-range-end: cover 40%;
+  animation-range-end: cover 15%;
 }
 
 .footer-ministries.links {
